<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Add Brew Round Players</string>
    <string name="app_name">Who\'s Making The Brew?</string>
    <string name="app_title">Who\'s Making The Brew?</string>
    <string name="run_tea_round">Run Brew...</string>
    <string name="add_player">Add Player...</string>
    <string name="no_players">No players...?</string>
    <string name="group_management">Group Name...</string>
    <string name="score_label">Score</string>
    <string name="winner_label">Who\'s Making?</string>
    <string name="group_management_title">Brew Round Groups</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="add_group_text">Add Group...</string>
    <string name="results">Results</string>
    <string name="dashboard_tea_timer">Brew Timer</string>
    <string name="dashboard_groups">Brew Groups</string>
    <string name="dashboard_stats">Brew Stats</string>
    <string name="dashboard_brew_round">Brew Round</string>
    <string name="changelog_title">Change Log</string>
    <string name="changelog_filename">changelog.html</string>
    <string name="ok">Ok</string>
    <string name="feedback">Feedback</string>
    <string name="fourzeros">00:00</string>
    <string name="sixzeros">00:00:00</string>
    <string name="hhmmss">hh:mm:ss</string>
    <string name="mmss">mm:ss</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="tea_timer_status_bar_notifications_title">Tea Timer Running</string>
    <string name="tea_timer_status_bar_notifications_text">Click to view timer!</string>
    <string name="tea_timer_status_bar_notifications_complete">Timer Complete!</string>
    <string name="stats_title">Tea Round Statistics</string>

    <!-- DASHBOARD -->

    <string name="feedbacktitle">Enter feedback details:
    </string>
    <string name="feedbackname">Name</string>
    <string name="feedbackemail">Email (not required)</string>
    <string name="feedbackbody">Details...</string>
    <string name="feedbackresponse">Would you like an email response?</string>
    <string name="feedbackbutton">Send Feedback...</string>
    <string name="feedbacktype">Type...</string>
    <string name="feedbacktype1">Improvement</string>
    <string name="feedbacktype2">Suggestion</string>
    <string name="feedbacktype3">Bug</string>
    <string name="feedbacktype4">Other</string>
    <string name="feedbackmessagebody_responseyes">Requires a response</string>
    <string name="feedbackmessagebody_responseno">Does not require a response</string>
    <string name="feedbackmessagesubject_format">Application Feedback (%1$s)</string>

</resources>