<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/top_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dip"
            android:paddingLeft="5dip"
            android:paddingTop="2dip"
            android:text="@string/winner_label" />

        <TextView
            android:id="@+id/winner_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dip"
            android:paddingLeft="5dip"
            android:paddingTop="2dip"
            android:text="@string/score_label" />

        <TextView
            android:id="@+id/winner_score"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dip"
            android:paddingLeft="5dip"
            android:paddingTop="2dip"
            android:text="@string/results" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <!-- Put whatever view item you want here -->

        <LinearLayout
            android:id="@+id/add_holder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/results_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottom_view"
        android:layout_below="@id/top_container" />

</RelativeLayout>